Fixed distrib with flit, upped to v0.15

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,5 @@ author-email = "eirannejad@gmail.com"
 home-page = "https://github.com/eirannejad/rsparam"
 classifiers = ["License :: OSI Approved :: MIT License"]
 
+[tool.flit.entrypoints."console_scripts"]
+rsparam = "rsparam.cli:main"
